--- a/pages/giftcards.html
+++ b/pages/giftcards.html
@@ -12,6 +12,7 @@
     <meta name="keywords" content="Hamburguesa,Hamburguesa Doble,Hamburguesa Triple,Cheddar,Dambo,Hamburguesería,Giftcard,Tucuman,CABA,Cordoba,Dia de la Hamburguesa,Palta,Guacamole,Bacon,Yerba Buena,Nueva Cordoba,Palermo,">
 </head>
 <body>
+  <!-- INICIO HEADER -->
     <header class="header">
         <nav class="navbar navbar-expand-lg">
             <div class="container-fluid">
@@ -43,7 +44,8 @@
             </div>
           </nav>
     </header>
-
+  <!-- FIN HEADER -->
+  <!-- INICIO MAIN -->
     <main class="main-giftcards">
         <h1>Giftcards</h1>
         <div class="contenedor-giftcards">
@@ -52,7 +54,7 @@
             <hr>
             <div class="card-body">
               <h5 class="card-title">Giftcard</h5>
-              <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde, cupiditate. <br><span>$500</span></p>
+              <p class="card-text">Tarjeta de Regalo, utilizable tanto en establecimiento como en compra online <br><span>$500</span></p>
               <a href="#" class="btn">Agregar</a>
             </div>
         </div>
@@ -61,7 +63,7 @@
             <hr>
             <div class="card-body">
               <h5 class="card-title">Giftcard</h5>
-              <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde, cupiditate. <br><span>$750</span></p>
+              <p class="card-text">Tarjeta de Regalo, utilizable tanto en establecimiento como en compra online <br><span>$750</span></p>
               <a href="#" class="btn">Agregar</a>
             </div>
         </div>
@@ -70,7 +72,7 @@
             <hr>
             <div class="card-body">
               <h5 class="card-title">Giftcard</h5>
-              <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde, cupiditate. <br><span>$1000</span></p>
+              <p class="card-text">Tarjeta de Regalo, utilizable tanto en establecimiento como en compra online <br><span>$1000</span></p>
               <a href="#" class="btn">Agregar</a>
             </div>
         </div>
@@ -79,7 +81,7 @@
             <hr>
             <div class="card-body">
               <h5 class="card-title">Giftcard</h5>
-              <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde, cupiditate. <br><span>$1500</span></p>
+              <p class="card-text">Tarjeta de Regalo, utilizable tanto en establecimiento como en compra online <br><span>$1500</span></p>
               <a href="#" class="btn">Agregar</a>
             </div>
         </div>
@@ -88,7 +90,7 @@
             <hr>
             <div class="card-body">
               <h5 class="card-title">Giftcard</h5>
-              <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde, cupiditate. <br><span>$2000</span></p>
+              <p class="card-text">Tarjeta de Regalo, utilizable tanto en establecimiento como en compra online <br><span>$2000</span></p>
               <a href="#" class="btn">Agregar</a>
             </div>
         </div>
@@ -97,13 +99,14 @@
             <hr>
             <div class="card-body">
               <h5 class="card-title">Giftcard</h5>
-              <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde, cupiditate. <br><span>$3000</span></p>
+              <p class="card-text">Tarjeta de Regalo, utilizable tanto en establecimiento como en compra online <br><span>$3000</span></p>
               <a href="#" class="btn">Agregar</a>
             </div>
         </div>
         </div>
     </main>
-
+  <!-- FIN MAIN -->
+  <!-- INICIO FOOTER -->
     <footer class="footer">
       <div class="footer-content">
         <a href="#">
@@ -141,5 +144,8 @@
           <p>copyright &copy;2022 chevvy's</p>
         </div>
     </footer>
+  <!-- FIN FOOTER -->
+  <!-- BOOTSTRAP JS -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
 </body>
 </html>
