--- a/pages/menu.html
+++ b/pages/menu.html
@@ -12,6 +12,7 @@
     <meta name="keywords" content="Hamburguesa,Hamburguesa Doble,Hamburguesa Triple,Cheddar,Dambo,Hamburguesería,Giftcard,Tucuman,CABA,Cordoba,Dia de la Hamburguesa,Palta,Guacamole,Bacon,Yerba Buena,Nueva Cordoba,Palermo,">
 </head>
 <body>
+  <!-- INICIO HEADER -->
     <header class="header">
         <nav class="navbar navbar-expand-lg">
             <div class="container-fluid">
@@ -43,14 +44,16 @@
             </div>
           </nav>
     </header>
+  <!-- FIN HEADER  -->
+  <!-- INICIO MAIN -->
     <main class="main-menu">
         <h1>Burguers</h1>
         <div class="menu-grid-container">
             <div class="grid-item">
               <img class="grid-item-img" src="../imagenes/simple.webp" alt="hamburguesa simple">
               <div class="info-contenedor">
-                <h5>food title <span>$500</span></h5>
-                <p>Lorem ipsum dolor sit amet.</p>
+                <h5>Simple Cheese <br><span>$500</span></h5>
+                <p>Medallon x1 Cheddar Fetas x2</p>
                 <div>
                   <button type="button" class="btn-agregar">
                       Agregar
@@ -61,8 +64,8 @@
             <div class="grid-item">
               <img class="grid-item-img" src="../imagenes/simple.webp" alt="hamburguesa simple">
               <div class="info-contenedor">
-                <h5>food title <span>$500</span></h5>
-                <p>Lorem ipsum dolor sit amet.</p>
+                <h5>Simple Cheese Bacon <br><span>$500</span></h5>
+                <p>Medallon x1 Cheddar Fetas x2 <br> Bacon</p>
                 <div>
                   <button type="button" class="btn-agregar">
                       Agregar
@@ -73,8 +76,8 @@
             <div class="grid-item">
               <img class="grid-item-img" src="../imagenes/simple.webp" alt="hamburguesa simple">
               <div class="info-contenedor">
-                <h5>food title <span>$500</span></h5>
-                <p>Lorem ipsum dolor sit amet.</p>
+                <h5>Chevvys Doble <br><span>$500</span></h5>
+                <p>Medallon x2 Cheddar Fetas x4 <br> Bacon Salsa Chevvys</p>
                 <div>
                   <button type="button" class="btn-agregar">
                       Agregar
@@ -85,8 +88,8 @@
             <div class="grid-item">
               <img class="grid-item-img" src="../imagenes/simple.webp" alt="hamburguesa simple">
               <div class="info-contenedor">
-                <h5>food title <span>$500</span></h5>
-                <p>Lorem ipsum dolor sit amet.</p>
+                <h5>Doble Cheese <br><span>$500</span></h5>
+                <p>Medallon x2 Cheddar Fetas x4</p>
                 <div>
                   <button type="button" class="btn-agregar">
                       Agregar
@@ -97,8 +100,8 @@
             <div class="grid-item">
               <img class="grid-item-img" src="../imagenes/simple.webp" alt="hamburguesa simple">
               <div class="info-contenedor">
-                <h5>food title <span>$500</span></h5>
-                <p>Lorem ipsum dolor sit amet.</p>
+                <h5>Blue Cheese <br><span>$500</span></h5>
+                <p>Medallon x2 Roquefort Fetas x4</p>
                 <div>
                   <button type="button" class="btn-agregar">
                       Agregar
@@ -109,8 +112,8 @@
             <div class="grid-item">
               <img class="grid-item-img" src="../imagenes/simple.webp" alt="hamburguesa simple">
               <div class="info-contenedor">
-                <h5>food title <span>$500</span></h5>
-                <p>Lorem ipsum dolor sit amet.</p>
+                <h5>Sinaloa <br><span>$500</span></h5>
+                <p>Medallon x2 Dambo Fetas x4 <br> + Palta + Jalapeño </p>
                 <div>
                   <button type="button" class="btn-agregar">
                       Agregar
@@ -121,8 +124,8 @@
             <div class="grid-item">
               <img class="grid-item-img" src="../imagenes/simple.webp" alt="hamburguesa simple">
               <div class="info-contenedor">
-                <h5>food title <span>$500</span></h5>
-                <p>Lorem ipsum dolor sit amet.</p>
+                <h5>Sweet Onion <br><span>$500</span></h5>
+                <p>Medallon x2 Cheddar Fetas x2 <br> Bacon Cebolla Caramelizada</p>
                 <div>
                   <button type="button" class="btn-agregar">
                       Agregar
@@ -133,8 +136,8 @@
             <div class="grid-item">
               <img class="grid-item-img" src="../imagenes/simple.webp" alt="hamburguesa simple">
               <div class="info-contenedor">
-                <h5>food title <span>$500</span></h5>
-                <p>Lorem ipsum dolor sit amet.</p>
+                <h5>Chevvys Triple <br><span>$500</span></h5>
+                <p>Medallon x3 Cheddar Fetas x6 <br> Salsa Chevvys</p>
                 <div>
                   <button type="button" class="btn-agregar">
                       Agregar
@@ -145,8 +148,8 @@
             <div class="grid-item">
               <img class="grid-item-img" src="../imagenes/simple.webp" alt="hamburguesa simple">
               <div class="info-contenedor">
-                <h5>food title <span>$500</span></h5>
-                <p>Lorem ipsum dolor sit amet.</p>
+                <h5>Triple Cheese Bacon<br><span>$500</span></h5>
+                <p>Medallon x3 Cheddar Fetas x6 <br> Bacon</p>
                 <div>
                   <button type="button" class="btn-agregar">
                       Agregar
@@ -156,6 +159,8 @@
             </div>
         </div>
     </main>
+  <!-- FIN MAIN -->
+  <!-- INICIO FOOTER -->
     <footer class="footer">
       <div class="footer-content">
         <a href="#">
@@ -193,6 +198,8 @@
           <p>copyright &copy;2022 chevvy's</p>
         </div>
     </footer>
+  <!-- FIN FOOTER -->
+  <!-- BOOTSTRAP JS -->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
 </body>
 </html>
