--- a/pages/sucursales.html
+++ b/pages/sucursales.html
@@ -12,6 +12,7 @@
     <meta name="keywords" content="Hamburguesa,Hamburguesa Doble,Hamburguesa Triple,Cheddar,Dambo,Hamburguesería,Giftcard,Tucuman,CABA,Cordoba,Dia de la Hamburguesa,Palta,Guacamole,Bacon,Yerba Buena,Nueva Cordoba,Palermo,">
 </head>
 <body>
+  <!-- INICIO HEADER -->
     <header class="header">
         <nav class="navbar navbar-expand-lg">
             <div class="container-fluid">
@@ -43,6 +44,8 @@
             </div>
           </nav>
     </header>
+  <!-- FIN HEADER -->
+  <!-- INICIO MAIN -->
     <main class="main-sucursales">
         <h1>Sucursales</h1>
         <section class="contenedor-mapas">
@@ -62,6 +65,8 @@
             </div>
         </section>
     </main>
+  <!-- FIN MAIN -->
+  <!-- INICIO FOOTER -->
     <footer class="footer">
       <div class="footer-content">
         <a href="#">
@@ -99,6 +104,8 @@
           <p>copyright &copy;2022 chevvy's</p>
         </div>
     </footer>
+  <!-- FIN FOOTER -->
+  <!-- BOOTSTRAP JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
 </body>
 </html>
