--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <meta name="keywords" content="Hamburguesa,Hamburguesa Doble,Hamburguesa Triple,Cheddar,Dambo,Hamburguesería,Giftcard,Tucuman,CABA,Cordoba,Dia de la Hamburguesa,Palta,Guacamole,Bacon,Yerba Buena,Nueva Cordoba,Palermo,">
 </head>
 <body>
+  <!-- INICIO HEADER -->
     <header class="header">
         <nav class="navbar navbar-expand-lg">
             <div class="container-fluid">
@@ -43,28 +44,32 @@
             </div>
           </nav>
     </header>
+    <!-- FIN HEADER -->
+    <!-- INICIO MAIN -->
         <main class="main-index">
             <section class="main-section-index">
                 <div class="section-img-1">
                    <img class="img-section-index" src="imagenes/ini11.jpg" alt="imagen hamburguesa de fondo">
-                    <a href="#">
-                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Consequatur laboriosam officia tenetur possimus voluptatum! Consectetur?
+                    <a href="pages/menu.html">
+                        CONOCÉ NUESTROS PRODUCTOS <br> ¡TENEMOS LAS MEJORES HAMBURGUESAS!
                     </a>
                 </div>
                 <div class="section-img-2">
                     <img class="img-section-index" src="imagenes/ini33.jpg" alt="imagen hamburguesa de fondo">
-                    <a href="#">
-                        Lorem ipsum dolor sit amet consectetur, adipisicing elit. Consequatur laboriosam officia tenetur possimus voluptatum! Consectetur?
+                    <a href="pages/nosotros.html">
+                        ¿QUIÉNES SOMOS? <br> DESCUBRÍ SOBRE NOSOTROS Y NUESTRA PASIÓN SOBRE LAS HAMBURGUESAS
                     </a>
                 </div>
                 <div class="section-img-3">
                     <img class="img-section-index" src="imagenes/ini22.jpg" alt="imagen hamburguesa de fondo">
-                    <a href="#">
-                       Lorem ipsum dolor sit amet consectetur, adipisicing elit. Consequatur laboriosam officia tenetur possimus voluptatum! Consectetur?
+                    <a href="pages/sucursales.html">
+                       ¿DÓNDE ENCONTRARNOS? <br> CONTAMOS CON 3 SUCURSALES PARA QUE DISFRUTES EL VERDADERO SABOR
                     </a>
                 </div>
             </section>
         </main>
+    <!-- FIN MAIN -->
+    <!-- INICIO FOOTER -->
     <footer class="footer">
       <div class="footer-content">
         <a href="#">
@@ -102,6 +107,8 @@
         <p>copyright &copy;2022 chevvy's</p>
       </div>
   </footer>
+  <!-- FIN FOOTER -->
+  <!-- BOOTSTRAP JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js" integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2" crossorigin="anonymous"></script>
 </body>
 </html>
