--- a/pages/menu.html
+++ b/pages/menu.html
@@ -55,7 +55,7 @@
                 <h5>Simple Cheese <br><span>$500</span></h5>
                 <p>Medallon x1 Cheddar Fetas x2</p>
                 <div>
-                  <button type="button" class="btn-agregar">
+                  <button type="button" class="btn">
                       Agregar
                   </button>
                 </div>
@@ -67,7 +67,7 @@
                 <h5>Simple Cheese Bacon <br><span>$500</span></h5>
                 <p>Medallon x1 Cheddar Fetas x2 <br> Bacon</p>
                 <div>
-                  <button type="button" class="btn-agregar">
+                  <button type="button" class="btn">
                       Agregar
                   </button>
                 </div>
@@ -79,7 +79,7 @@
                 <h5>Chevvys Doble <br><span>$500</span></h5>
                 <p>Medallon x2 Cheddar Fetas x4 <br> Bacon Salsa Chevvys</p>
                 <div>
-                  <button type="button" class="btn-agregar">
+                  <button type="button" class="btn">
                       Agregar
                   </button>
                 </div>
@@ -91,7 +91,7 @@
                 <h5>Doble Cheese <br><span>$500</span></h5>
                 <p>Medallon x2 Cheddar Fetas x4</p>
                 <div>
-                  <button type="button" class="btn-agregar">
+                  <button type="button" class="btn">
                       Agregar
                   </button>
                 </div>
@@ -103,7 +103,7 @@
                 <h5>Blue Cheese <br><span>$500</span></h5>
                 <p>Medallon x2 Roquefort Fetas x4</p>
                 <div>
-                  <button type="button" class="btn-agregar">
+                  <button type="button" class="btn">
                       Agregar
                   </button>
                 </div>
@@ -115,7 +115,7 @@
                 <h5>Sinaloa <br><span>$500</span></h5>
                 <p>Medallon x2 Dambo Fetas x4 <br> + Palta + Jalapeño </p>
                 <div>
-                  <button type="button" class="btn-agregar">
+                  <button type="button" class="btn">
                       Agregar
                   </button>
                 </div>
@@ -127,7 +127,7 @@
                 <h5>Sweet Onion <br><span>$500</span></h5>
                 <p>Medallon x2 Cheddar Fetas x2 <br> Bacon Cebolla Caramelizada</p>
                 <div>
-                  <button type="button" class="btn-agregar">
+                  <button type="button" class="btn">
                       Agregar
                   </button>
                 </div>
@@ -139,7 +139,7 @@
                 <h5>Chevvys Triple <br><span>$500</span></h5>
                 <p>Medallon x3 Cheddar Fetas x6 <br> Salsa Chevvys</p>
                 <div>
-                  <button type="button" class="btn-agregar">
+                  <button type="button" class="btn">
                       Agregar
                   </button>
                 </div>
@@ -151,7 +151,7 @@
                 <h5>Triple Cheese Bacon<br><span>$500</span></h5>
                 <p>Medallon x3 Cheddar Fetas x6 <br> Bacon</p>
                 <div>
-                  <button type="button" class="btn-agregar">
+                  <button type="button" class="btn">
                       Agregar
                   </button>
                 </div>
